--- a/sellgame/package.json
+++ b/sellgame/package.json
@@ -10,7 +10,10 @@
     "antd": "^5.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "^2.1.8",
+    "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
